<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello, Android! I am a string resource!</string>
    <string name="app_name">SearchBadger</string>
    <string name="search">Search</string>
    <string name="symbol_pound">#</string>
    <string name="symbol_star">*</string>
    <string name="symbol_underscore">_</string>
    <string name="empty"></string>
    <string name="date">Date</string>
    <string name="today">Today</string>
    <string name="yesterday">Since Yesterday</string>
    <string name="past_week">Past Week</string>
    <string name="past_month">Past Month</string>
    <string name="before">Before</string>
    <string name="after">After</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="sample_date_time">12/12/2012\n11:00 AM</string>
    <string name="sent_received">Sent/Received</string>
    <string name="contacts">Contacts</string>
    <string name="select_contacts">Select Contacts</string>
    <string name="contact_selection">This will display the list of contacts selected.</string>
    <string name="sample_date">11/30/2012</string>
    <string name="login">Log In</string>
    <string name="logout">Log Out</string>
    <string name="accounts">Accounts</string>
    <string name="example_contact">John Doe</string>
    <string name="result">Search Result</string>
    <string name="sample_message">This is a sample message.</string>
    <string name="thread">Conversation</string>
    <string name="sent">Sent</string>
    <string name="received">Received</string>
    <string name="hint_search_text">Enter search here</string>
    <string name="menu_done">Done</string>
    <string name="menu_cancel">Cancel</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="no_results">No Messages Found\nTry another search.</string>
    <string name="search_error">An Error Occurred\nPlease report this at http://www.github.com/searchbadger/searchbadger/issues</string>
    <string name="thread_error">An error occurred retriving the message thread contents.\nPlease report this at http://www.github.com/searchbadger/searchbadger/issues</string>
    <string name="no_starred_messages">No Starred Messages\nWhy don\'t you perform a search?</string>
    <string name="starred_error">An error occurred retriving the starred messages.\n\nPlease report this at\nhttp://www.github.com/searchbadger/searchbadger/issues</string>
    <string name="recent_error">An error occurred retriving recent searches.\n\nPlease report this at\nhttp://www.github.com/searchbadger/searchbadger/issues</string>
    <string name="no_recent_searches">No Recent Searches\nWhy don\'t you perform a search?</string>
    <string name="word_cloud">Word Cloud</string>
    <string name="regex_description">RegEx symbols for advance searching (see Help Menu)</string>
    <string name="save_word_cloud">Save Word Cloud to SD</string>
</resources>