<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayoutStarredMessagesListItem"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:baselineAligned="true" >

    <CheckBox
        android:id="@+id/starred_checkbox"
        style="?android:attr/starStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:checked="false"
        android:focusable="false"
        android:text="" >
    </CheckBox>

    <TextView
        android:id="@+id/messages_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingBottom="8dp"
        android:paddingLeft="5dp"
        android:text="@string/sample_message"
        android:textAppearance="?android:attr/textAppearanceSmall" >

    </TextView>

    <TextView
        android:id="@+id/starred_messages_date"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:text="@string/sample_date_time"
        android:textSize="10sp" >

    </TextView>

    <ImageView
        android:id="@+id/image_starred_messages"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:contentDescription="@string/empty"
        android:src="@drawable/sms_selected" />

</LinearLayout>